[package]
name = "mdbook-prql"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false
doc = false
doctest = false

[[bin]]
bench = false
name = "mdbook-prql"
test = false

[target.'cfg(not(target_family="wasm"))'.dependencies]
ansi-to-html = "0.2.2"
anyhow = { workspace = true }
itertools = { workspace = true }
# Lock mdbook to 0.4.x series - newer versions (0.5+) may use different pulldown-cmark versions
mdbook = { version = "0.4.52", default-features = false }
mdbook-preprocessor-boilerplate = "0.1.2"
prqlc = { path = "../../prqlc/prqlc", default-features = false }
# Lock pulldown-cmark to 0.10.x to match mdbook 0.4's dependency
pulldown-cmark = { version = "0.10.3", default-features = false }
# Lock pulldown-cmark-to-cmark to 14.x - version 15+ requires pulldown-cmark 0.11+
pulldown-cmark-to-cmark = "~14.0"
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
anstream = { version = "0.6.21" }
globset = "0.4.16"
insta = { workspace = true }
log = { workspace = true }
regex = "1.12.2"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
similar-asserts = { workspace = true }
walkdir = "2.5.0"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
